<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_prevention_main_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_peekHeight="16dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="14dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_line"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/txt_settings_lamp"
                android:textAllCaps="true"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_10" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_lighting_time"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_watering_time_exp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:gravity="start|center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:textAlignment="center"
                        android:text="@string/txt_lamp_on"
                        android:textAllCaps="true"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/txt_lamp_off"
                        android:textAllCaps="true"
                        android:textSize="10sp"
                        tools:ignore="SmallSp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:gravity="start|center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_time_on_lightning"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_weight="1"
                        android:background="@drawable/bg_stroke_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/txt_time"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <TextView
                        android:id="@+id/btn_time_off_lightning"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginEnd="@dimen/margin_8"
                        android:layout_weight="1"
                        android:background="@drawable/bg_stroke_btn"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center"
                        android:text="@string/txt_time"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_8"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_day_repeat"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_day_lighting_repeat_exp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorBlack"
                    android:textSize="10sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/margin_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_day1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_4"
                    android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_day1_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="DuplicateSpeakableTextCheck" />
                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/margin_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_day2"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_4"
                    android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_day2_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/margin_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_day3"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_4"
                    android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_day3_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/margin_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_day4"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_4"
                    android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_day4_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/margin_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_day5"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_4"
                    android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_day5_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/margin_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_day6"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_4"
                    android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_day6_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:minHeight="@dimen/margin_16"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_day7"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="@dimen/margin_4"
                    android:layout_height="wrap_content" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/btn_day7_lamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    android:layout_width="@dimen/margin_8"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_10" />
            <Button
                android:id="@+id/btn_set_lamp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/txt_save"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>
